--- a/style.css
+++ b/style.css
@@ -12,9 +12,9 @@ html,body{
 .container{
     width:100%;
     height:100%;
-    background:rgb(11, 11, 39);
+    background:linear-gradient(white,rgb(253, 209, 222),rgb(255, 80, 118));
     position: relative;
-  
+
    
 }
 .main{
@@ -56,9 +56,11 @@ html,body{
 @keyframes blink {
 0% {
 opacity: 1;
+
 }
 100% {
 opacity: 0.5;
+
 }
 }
 
