--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ html,body{
 .container{
     width:100%;
     height:100%;
-    background:linear-gradient(white,rgb(253, 209, 222),rgb(255, 80, 118));
+    background:black;
     position: relative;
 
    
